--- a/public/wishlists.html
+++ b/public/wishlists.html
@@ -3,18 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wishlist Details</title>
+    <title>User Wishlist</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
-        <h1>Wishlist Details</h1>
+        <h1>Wishlist</h1>
     </header>
     <div class="container">
-        <div id="wishlist-details">
-            <!-- تفاصيل قائمة الأمنيات -->
+        <div id="wishlist">
+            <h2>Wishlist Items</h2>
+            <!-- سيتم ملؤها بواسطة wishlists.js -->
         </div>
     </div>
-    <script src="js/scripts.js"></script>
+    <script src="js/wishlists.js"></script>
 </body>
 </html>
